# rook_aoc_2023

./: Cargo.toml  README.md  lower_times.csv  out.txt  results_to_csv.sh  run.py  run_latest.sh
results/: last.csv  last.txt  latest.csv  latest.txt
src/: aocbase.rs  aocio.rs  main.rs  mathx.rs  regex_ext.rs  run.rs
src/problems/: mod.rs  problem1.rs  problem10.rs  problem11.rs  problem12.rs  problem13.rs  problem14.rs  problem15.rs  problem16.rs  problem17.rs  problem18.rs  problem19.rs  problem2.rs  problem20.rs  problem21.rs  problem22.rs  problem23.rs  problem24.rs  problem25.rs  problem3.rs  problem4.rs  problem5.rs  problem6.rs  problem7.rs  problem8.rs  problem9.rs
