[package]
name = "rook_aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
lazy_static = "1.4.0"
regex = "1.10.2"
thiserror = "1.0.50"
